syntax = "proto3";

option go_package = "level";
option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "LevelProto";

package level;

message LevelMessage {
    int32 id = 1;
    string name = 2;
    float default_score = 3;
    string created_at = 4;
    string updated_at = 5;
    string deleted_at = 6;
}

message ListLevelRequest {}

message ListLevelResponse {
    repeated LevelMessage levels = 1;
}

message GetLevelRequest {
    int32 id = 1;
}
message GetLevelResponse {
    LevelMessage level = 1;
}

message CreateLevelRequest {
    string name = 1;
    float default_score = 2;
}
message CreateLevelResponse {
    LevelMessage level = 1;
}

message UpdateLevelRequest {
    int32 id = 1;
    string name = 2;
    float default_score = 3;
}
message UpdateLevelResponse {
    LevelMessage level = 1;
}

message DeleteLevelRequest {
    int32 id = 1;
}
message DeleteLevelResponse {}